fixed swiper js vertical alignment using css

--- a/src/styles/aboutAndContact.css
+++ b/src/styles/aboutAndContact.css
@@ -1,3 +1,6 @@
+.swiper-wrapper{
+    align-items: center;
+}
 .aboutSectionContainer{
     background-color: var(--primary);
     height: 100vh;
